API: entity access on DialogueContext, commands with help text and pickers, data sets, run-time NPC bindings, NPC variables; live known-name sets